--- a/index.html
+++ b/index.html
@@ -6,24 +6,16 @@
 </head>
 
 <body>
-    Your Symbol: <div id="symbol">waiting...</div>
-    <div class="board">
-        <button class="cell" id="a0"></button>
-        <button class="cell" id="a1"></button>
-        <button class="cell" id="a2"></button>
-        <button class="cell" id="b0"></button>
-        <button class="cell" id="b1"></button>
-        <button class="cell" id="b2"></button>
-        <button class="cell" id="c0"></button>
-        <button class="cell" id="c1"></button>
-        <button class="cell" id="c2"></button>
-
-        <div id="messages">Waiting for opponent to join...</div>
+    <div>
+        <h1>Hello, Socket!</h1>
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="app/tictactoe.js"></script>
+
+    <script>
+        let socket = io(); // localhost:5000
+    </script>
 </body>
 
 </html>
